2022-06-16  Matteo Corti  <matteo@corti.li>

        * update.sh: MacUpdater: force scan before update

2022-06-15  Matteo Corti  <matteo@corti.li>

        * update.sh: MacUpdater support

2021-12-14  Matteo Corti  <matteo@corti.li>

        * update.sh (usage): Added the --name option
