@@ -1,3 +1,7 @@
+2022-06-20  Matteo Corti  <matteo@corti.li>
+
+        * update.sh: Skipping MS and Adobe if MacUpdater is present
+
 2022-06-16  Matteo Corti  <matteo@corti.li>
 
         * update.sh: MacUpdater: force scan before update
